--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New User</h1>
 
 <%= render 'form', user: @user %>
+<button><%= link_to 'Back', users_path %></button>
 
-<%= link_to 'Back', users_path %>
