--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
     <tr>
       <th>Name</th>
       <th>Email</th>
-      <th colspan="3"></th>
+      <th colspan="3">Description</th>
     </tr>
   </thead>
 
@@ -13,9 +13,9 @@
   <tr>
     <td><%= user.name %></td>
     <td><%= user.email %></td>
-    <td><%= link_to 'Show', user %></td>
-    <td><%= link_to 'Edit', edit_user_path(user) %></td>
-    <td><%= link_to 'Destroy', user, method: :delete,
+    <td><%= link_to 'Show',user ,class:"btn btn-primary"  %></td>
+    <td><%= link_to 'Edit', edit_user_path(user) , class:"btn btn-warning"%></td>
+    <td><%= link_to 'Destroy', user, class:"btn btn-danger" , method: :delete,
                                      data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
@@ -23,4 +23,4 @@
 
 <br>
 
-<%= link_to 'New User', new_user_path %>
+<%= link_to 'New User', new_user_path, class: "btn btn-info" %>
