--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,13 @@
 <body>
   <%= render 'layouts/header' %>
   <div class="container">
-    <%= yield %>
-    <%= render 'layouts/footer' %>
+    <div class="jumbotron">
+      <h1>Bootstrap Tutorial</h1>      
+      <p>Bootstrap is the most popular HTML, CSS, and JS framework for developing responsive, mobile-first projects on the web.</p>
+    </div>    
+    <%= yield %> 
   </div>
+  <%= render 'layouts/footer' %>
+  <%= debug(params) if Rails.env.development? %>
 </body>
 </html>
