--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -20,6 +20,14 @@
     <%= form.label :email %>
     <%= form.text_field :email, id: :user_email, class: "form-control" %>
   </div>
+    <div class="field">
+    <%= form.label :password %>
+    <%= form.text_field :password, id: :user_email, class: "form-control" %>
+  </div>
+    <div class="field">
+    <%= form.label :password_digestss %>
+    <%= form.text_field :password_digest, id: :user_email, class: "form-control" %>
+  </div>
 
   <div class="actions">
     <%= form.submit :submit, class: "btn btn-info" %>
