--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,26 +1,11 @@
-<h1>Listing users</h1>
-
-<table class="table table-bordered">
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Email</th>
-      <th colspan="3">Description</th>
-    </tr>
-  </thead>
-
-<% @users.each do |user| %>
-  <tr>
-    <td><%= user.name %></td>
-    <td><%= user.email %></td>
-    <td><%= link_to 'Show',user ,class:"btn btn-primary"  %></td>
-    <td><%= link_to 'Edit', edit_user_path(user) , class:"btn btn-warning"%></td>
-    <td><%= link_to 'Destroy', user, class:"btn btn-danger" , method: :delete,
-                                     data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-</table>
-
-<br>
-
-<%= link_to 'New User', new_user_path, class: "btn btn-info" %>
+<% provide(:title, @user.name) %>
+<div class="row">
+  <aside class="span4">
+    <section>
+      <h1>
+        <%= gravatar_for @user %>
+        <%= @user.name %>
+      </h1>
+    </section>
+  </aside>
+</div>
