--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -53,6 +53,8 @@ p {
   letter-spacing: -1px;
   padding-top: 9px;
   font-weight: bold;
+  height: 120px;
+  margin-top: -25px;
 }
 
 #logo:hover {
