--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,9 +14,8 @@
 <body>
   <%= render 'layouts/header' %>
   <div class="container">
-    <div class="jumbotron">
-      <h1>Bootstrap Tutorial</h1>      
-      <p>Bootstrap is the most popular HTML, CSS, and JS framework for developing responsive, mobile-first projects on the web.</p>
+    <div class="" style="padding: 30px">
+      
     </div>    
     <%= yield %> 
   </div>
